# KEBABMES20

./: .gitignore  latest.json
.github/workflows/: build-desktop.yml  deploy-backend.yml  deploy.yml  tauri-build.yml  tauri-kiosk.yml  tauri-rozbior-v10.yml  tauri-rozbior-v11.yml  tauri-rozbior-v7.yml
docs/superpowers/specs/: 2026-05-31-rozbior-hmi-v4-refine-design.md
kebab-mes-desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
kebab-mes-desktop/src/: App.tsx  index.css  main.tsx
kebab-mes-desktop/src-tauri/: Cargo.toml  tauri.conf.json
kebab-mes-desktop/src-tauri/capabilities/: main.json
kebab-mes-desktop/src-tauri/icons/: icon.icns
kebab-mes-desktop/src-tauri/src/: lib.rs
kebab-mes-desktop/src/api/: client.ts  index.ts
kebab-mes-desktop/src/components/: Sidebar.tsx  TitleBar.tsx  TopBar.tsx
kebab_fixed/: .dockerignore  .env.example  .env.local.example  .gitignore  AKTUALIZUJ.sh  AKTUALIZUJ_VPS.sh  CLAUDE.md  INSTALUJ_PRODUKCJA.sh  INSTALUJ_VPS.sh  INSTRUKCJA_POSTGRESQL.md  KOMENDY_VPS.sh  README.md  components.json  gen_icon.py  index.html  kiosk.html  package-lock.json  package.json  playwright.config.ts  rozbior-v10.html  rozbior-v11.html  rozbior-v7.html  tailwind.config.js  vite.config.ts  vitest.config.ts
kebab_fixed/.claude/: settings.json
kebab_fixed/backend/: .env.example  CLAUDE.md  build_test_db.py  cleanup_legacy_batches.py  fix_seasoned_split_364.py  init_db.py  migrate_batch_numbers.py  requirements_dev.txt  requirements_pg.txt  server_pg.py
kebab_fixed/deploy/: .env.example  Dockerfile  README.md  SETUP-MINI-PC.md  backup_db.sh  deploy.sh  docker-compose.yml  entrypoint.sh  kebab-backup.service  kebab-backup.timer  nginx-login-ratelimit.md  nowy-klient.sh
kebab_fixed/e2e/: README.md  auth.spec.ts  masownia-hmi-v2.spec.ts  traceability.spec.ts  zoom.spec.ts
kebab_fixed/public/: manifest-rozbior.json  manifest-skaner.json  sw.js
kebab_fixed/src/: App.tsx  index.css  kiosk.tsx  main.tsx  rozbior-v10.tsx  rozbior-v11.tsx  rozbior-v7.tsx
kebab_fixed/src-tauri/: Cargo.toml  tauri.conf.json  tauri.kiosk.conf.json  tauri.rozbior-v10.conf.json  tauri.rozbior-v11.conf.json  tauri.rozbior-v7.conf.json
kebab_fixed/src-tauri/capabilities/: default.json
kebab_fixed/src-tauri/src/: lib.rs  scale.rs
kiosk-browser/: README.md  rozbior-kiosk.bat
kiosk-setup/: README.md  kiosk-autologon-admin.bat  przywroc-pulpit.bat  test-wagi.bat  test-wagi.ps1  ustaw-com-wagi.bat  ustaw-hmi-jako-powloke.bat
scripts/: get-desktop.sh  install-vps.sh  update-vps.sh
(+599 files in other folders)
