[package]
name = "kebab-mes"
version = "2.5.38"
description = "Kebab MES — System zarządzania produkcją"
authors = []
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Build kiosku rozbioru: wyłącza auto-updater i blokuje zamknięcie okna.
kiosk = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
