[package]
name = "kebab-mes"
version = "2.5.40"
description = "Kebab MES — System zarządzania produkcją"
authors = []
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Build kiosku rozbioru: cichy auto-update w tle (bez dialogu — nikt nie ma
# dostępu do Windowsa żeby kliknąć "zainstaluj") i blokuje zamknięcie okna.
kiosk = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Tauri używa tokio wewnętrznie (tranzytywnie) — deklarujemy jawnie tylko po
# to, żeby móc użyć tokio::time::sleep w pętli cichego sprawdzania aktualizacji
# w kiosku; wersja "1" ujednolici się z tym, co i tak ciągnie Tauri.
tokio = { version = "1", features = ["time"] }
# Most wagowy RS232 (HMI rozbiór v10): odczyt wagi najazdowej z portu
# szeregowego. default-features=false — bez enumeracji udev, port otwieramy
# po nazwie z configu (COM3), co kompiluje się czysto na Linux/Windows.
serialport = { version = "4", default-features = false }
